--- a/layouts/default.html
+++ b/layouts/default.html
@@ -1,27 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     {% include head.html %}
-</head>
-<body>
-    <header class="page-header">
-        <a href="/" class="page-header__logo" title="Go home">
-            <img src="/assets/avatar-bret.jpg" alt="" width="48">
-        </a>
-
-        <nav>
-            <a href="/">Home</a>
-            <a href="/about">About Me</a>
-            <a href="/blog">Dev Blog</a>
-            <a href="/notes">Notes</a>
-        </nav>
-    </header>
-    <main>
-        {{content}}
-    </main>
-    
+  </head>
+  <body>
+    <div class="window">
+      {% include nav2.html %}
+      <main>{{content}}</main>
+    </div>
     <footer class="page-footer">
-        <small>Copyright {{site.author}}</small>
+      <small>Copyright {{site.author}}</small>
     </footer>
-</body>
+    <script src="/assets/script.js"></script>
+  </body>
 </html>
