--- a/assets/styles.css
+++ b/assets/styles.css
@@ -13,6 +13,10 @@
   --vivid-sky-blue: #4cc9f0ff;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 100%;
   scroll-behavior: smooth;
@@ -29,37 +33,59 @@ body {
   margin: 0;
 }
 
-@media only screen and (max-width: 468px) {
-  .page-header {
-    flex-direction: column;
+li {
+  text-decoration: none !important;
+}
+
+@media (min-width: 601px) {
+  .header {
+    position: fixed;
+    width: 100%;
+    overflow: hidden;
+    top: 0;
+  }
+
+  .menu {
+    display: flex;
+    background: linear-gradient(to right, var(--trypan-blue-2), var(--trypan-blue));
+    border-top: 3px solid var(--major-accent);
+    border-bottom: 3px solid var(--major-accent);
+    justify-content: flex-end;
+    padding-right: 10%;
+    align-items: center;
+    margin-top: 0;
+    text-decoration: none;
+    list-style-type: none;
+    height: 50px;
+  }
+
+  .flex-container {
+    display: flex;
+  }
+
+  .menu :not(:hover):not(:focus) {
+    color: currentColor;
+    text-decoration: none !important;
+    list-style-type: none;
+  }
+
+  .header li {
+    text-decoration: none;
+  }
+
+  .menu a {
+    margin: 0 12px;
+    font-size: 1.25em;
   }
 }
-.page-header {
-  display: flex;
-  background: linear-gradient(to right, var(--trypan-blue-2), var(--trypan-blue));
-  border-bottom: 3px solid var(--major-accent);
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: space-around;
-  margin-top: 0;
-}
-
-.page-header nav a:not(:hover):not(:focus) {
-  color: currentColor;
-  text-decoration: none;
-}
-
-nav a {
-  margin: 0 12px;
-  font-size: 1.25em;
-}
-
 main {
   flex-grow: 1;
   /* background-color: rgba(0, 0, 0, 0.25); */
-  max-width: 60ch;
+  max-width: 70ch;
   width: 100%;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 65px;
 }
 
 main > h1,
@@ -67,6 +93,7 @@ h2,
 h3,
 h4,
 h5,
+article,
 p {
   padding: 1rem;
 }
@@ -104,6 +131,7 @@ a[href]:focus {
 /* Typography */
 p {
   margin-bottom: 1.15rem;
+  font-size: 1.1rem;
 }
 
 h1,
@@ -153,7 +181,7 @@ small {
 .backlinks-default {
   margin-top: 0;
   margin-left: 16px;
-  color: var(--grey);
+  color: black;
 }
 
 .backlink__preview {
@@ -177,17 +205,21 @@ small {
   background: linear-gradient(transparent, white);
   width: 100%;
   height: 24px;
+  color: black;
 }
 
 .backlink__preview h1 {
+  padding-left: 1rem;
   font-size: 1.2rem;
   margin-top: 8px;
   font-weight: bold;
+  color: black;
 }
 
 .backlink {
   width: fit-content;
   position: relative;
+  color: black;
 }
 
 .backlink:hover {
