--- a/includes/nav2.html
+++ b/includes/nav2.html
@@ -9,9 +9,9 @@
   <div class="icon icon-apple"></div>
   <ul class="menu">
     <li class="menu-item"><a href="/">Home</a></li>
-    <li class="menu-item"><a href="/About">About</a></li>
-    <li class="menu-item"><a href="/Blog">Blog</a></li>
-    <li class="menu-item"><a href="/Notes">Notes</a></li>
+    <li class="menu-item"><a href="/about">About</a></li>
+    <li class="menu-item"><a href="/blog">Blog</a></li>
+    <li class="menu-item"><a href="/notes">Notes</a></li>
   </ul>
   <div class="shop icon icon-bag"></div>
 </div>
