Syntax Highlighting Successful

--- a/includes/head.html
+++ b/includes/head.html
@@ -36,7 +36,10 @@ metadesc = site.desc %} {% if desc %} {% assign metadesc = desc %} {% endif %}
   href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
   rel="stylesheet"
 />
-
+<link
+  href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css"
+  rel="stylesheet"
+/>
 <link rel="preconnect" href="https://cdnjs.cloudflare.com/" crossorigin />
 <link
   rel="stylesheet"
