Adding blog and moment

--- a/blog.njk
+++ b/blog.njk
@@ -1,6 +1,16 @@
 ---
-layout: default
+layout: blog-post.njk
+pagination:
+  data: collections.post
+  size: 10
+  reverse: true
+  alias: posts
 ---
-
-Here we go!
-I think this can work out, right?
+{% for post in posts %}
+  <article>
+    <h1>
+      <a href="{{ post.url | url }}">{{ post.data.title }}</a>
+    </h1>
+    <time datetime="{{ post.date | dateIso }}">{{ post.date | dateReadable }}</time>
+  </article>
+{% endfor %}
