--- a/blog.njk
+++ b/blog.njk
@@ -2,7 +2,7 @@
 layout: blog-post.njk
 pagination:
   data: collections.post
-  size: 10
+  size: 2
   reverse: true
   alias: posts
 ---
@@ -12,5 +12,22 @@ pagination:
       <a href="{{ post.url | url }}">{{ post.data.title }}</a>
     </h1>
     <time datetime="{{ post.date | dateIso }}">{{ post.date | dateReadable }}</time>
+    {% excerpt post %}
+    <a href="{{ post.url | url }}"
+    aria-label="Read more on {{ post.data.title }}">Read more</a>
   </article>
 {% endfor %}
+
+{% if pagination.href.previous or pagination.href.next %}
+<nav class="pagenav">
+
+  {% if pagination.href.previous %}
+    <p><a href="{{ pagination.href.previous }}">Newer Articles</a></p>
+  {% endif %}
+
+  {% if pagination.href.next %}
+    <p><a href="{{ pagination.href.next }}">Previous Articles</a></p>
+  {% endif %}
+
+</nav>
+{% endif %}
