--- a/assets/styles.css
+++ b/assets/styles.css
@@ -37,6 +37,20 @@ li {
   text-decoration: none !important;
 }
 
+img {
+  max-width: 100%;
+}
+
+img[width] {
+  width: auto;
+  /* Defer to max-width */
+}
+
+img[width][height] {
+  height: auto;
+  /* Preserve aspect ratio */
+}
+
 @media (min-width: 601px) {
   .header {
     position: fixed;
