--- a/includes/nav2.html
+++ b/includes/nav2.html
@@ -8,6 +8,9 @@
   </div>
   <div class="icon icon-apple"></div>
   <ul class="menu">
+    <div id="page-title">
+      <h2>Dev Rhet</h2>
+    </div>
     <li class="menu-item"><a href="/">Home</a></li>
     <li class="menu-item"><a href="/about">About</a></li>
     <li class="menu-item"><a href="/blog">Blog</a></li>
