--- a/layouts/blog-post.njk
+++ b/layouts/blog-post.njk
@@ -57,7 +57,7 @@
       <main>{{ content | safe }}</main>
     </header>
     <footer class="page-footer">
-      <small>Copyright {{site.author}}</small>
+      <small>© {{site.year}} {{site.author}}</small>
     </footer>
     <script src="/assets/script.js"></script>
   </body>
