--- a/layouts/default.html
+++ b/layouts/default.html
@@ -10,7 +10,7 @@
     </header>
     <hr />
     <footer class="page-footer">
-      <small>Copyright {{site.author}}</small>
+      <small>© {{site.year}} {{site.author}}</small>
     </footer>
     <script src="/assets/script.js"></script>
   </body>
