Removed gradient text

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -63,16 +63,16 @@ img[width][height] {
 //   background-color: white;
 // }
 
-strong {
-  // font-size: 72px;
-  background: -webkit-linear-gradient(
-    -90deg,
-    var(--dodger-blue) 43%,
-    var(--major-accent)
-  );
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
+// strong {
+//   // font-size: 72px;
+//   background: -webkit-linear-gradient(
+//     -90deg,
+//     var(--dodger-blue) 43%,
+//     var(--major-accent)
+//   );
+//   -webkit-background-clip: text;
+//   -webkit-text-fill-color: transparent;
+// }
 
 @media (min-width: 601px) {
   .header {
