--- a/assets/styles.css
+++ b/assets/styles.css
@@ -268,7 +268,7 @@ small {
     position: relative;
     display: block;
     box-shadow: 0 0 65px 15px rgba(0, 0, 0, 0.2);
-    overflow: scroll;
+    overflow: hidden;
     border-radius: 3px;
   }
   .window .header {
@@ -485,7 +485,6 @@ pre[class*=language-] {
 pre[class*=language-] {
   padding: 1em;
   margin: 0.5em 0;
-  overflow: auto;
   border-radius: 0.3em;
 }
 
