--- a/assets/styles.css
+++ b/assets/styles.css
@@ -63,6 +63,7 @@ img[width][height] {
   .header {
     position: fixed;
     width: 100%;
+    overflow: hidden;
     top: 0;
   }
 
@@ -226,6 +227,7 @@ small {
   box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.25);
   width: 348px;
   max-height: 148px;
+  overflow: hidden;
 }
 
 .backlink__preview::after {
@@ -266,7 +268,7 @@ small {
     position: relative;
     display: block;
     box-shadow: 0 0 65px 15px rgba(0, 0, 0, 0.2);
-    overflow: auto;
+    overflow: scroll;
     border-radius: 3px;
   }
   .window .header {
@@ -277,6 +279,7 @@ small {
     height: 50px;
     width: 100%;
     background: var(--byzantine);
+    overflow: hidden;
     transition: all 0.5s ease-out, background 1s ease-out;
     transition-delay: 0.2s;
     z-index: 1;
@@ -422,6 +425,7 @@ small {
     font-family: Roboto;
     padding: 67px 4% 0;
     text-align: justify;
+    overflow: scroll;
     max-height: 100%;
   }
   .window .content::-webkit-scrollbar {
@@ -481,6 +485,7 @@ pre[class*=language-] {
 pre[class*=language-] {
   padding: 1em;
   margin: 0.5em 0;
+  overflow: auto;
   border-radius: 0.3em;
 }
 
