--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -78,7 +78,7 @@ img[width][height] {
   .header {
     position: fixed;
     width: 100%;
-    // overflow: auto;
+    overflow: hidden;
     top: 0;
   }
 
@@ -262,7 +262,7 @@ small {
   box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.25);
   width: 348px;
   max-height: 148px;
-  // overflow: auto;
+  overflow: hidden;
 }
 .backlink__preview::after {
   content: "";
@@ -306,7 +306,7 @@ $menuItems: 5;
     // height: 567px;
     // margin: 100px auto 0;
     box-shadow: 0 0 65px 15px rgba(#000, 0.2);
-    overflow: auto;
+    overflow: scroll;
     border-radius: 3px;
     // background: #f1f1f1;
     .header {
@@ -318,7 +318,7 @@ $menuItems: 5;
       width: 100%;
       background: var(--byzantine);
       // background: linear-gradient(to right, var(--byzantine), var(--purple));
-      // overflow: auto;
+      overflow: hidden;
       transition: all 0.5s ease-out, background 1s ease-out;
       transition-delay: 0.2s;
       z-index: 1;
@@ -450,7 +450,7 @@ $menuItems: 5;
       font-family: Roboto;
       padding: 67px 4% 0;
       text-align: justify;
-      // overflow: auto;
+      overflow: scroll;
       max-height: 100%;
       &::-webkit-scrollbar {
         display: none;
@@ -512,7 +512,7 @@ pre[class*="language-"] {
 pre[class*="language-"] {
   padding: 1em;
   margin: 0.5em 0;
-  // overflow: auto;
+  overflow: auto;
   border-radius: 0.3em;
 }
 
