--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -629,10 +629,11 @@ pre[class*="language-"] {
 }
 
 main > article {
-  border: 1px dashed var(--vivid-sky-blue);
-  padding-bottom: 2rem;
-  margin-bottom: 2rem;
-  border-radius: 0.5rem;
+  // border: 1px dashed var(--vivid-sky-blue);
+  padding-bottom: 1.5rem;
+  margin-bottom: 1.5rem;
+  padding-top: 1rem;
+  // border-radius: 0.5rem;
 }
 
 .page-title {
