--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,6 +1,6 @@
 :root {
   --accent: #2d9cdb;
-  --grey: #b5b5b5;
+  --grey: #3a374b;
   --major-accent: #f72585;
   --major-accent-2: #fc8181;
   --byzantine: #b5179eff;
@@ -18,6 +18,10 @@
 
 * {
   box-sizing: border-box;
+}
+
+code {
+  background-color: var(--grey);
 }
 
 html {
