--- a/includes/head.html
+++ b/includes/head.html
@@ -31,6 +31,10 @@ metadesc = site.desc %} {% if desc %} {% assign metadesc = desc %} {% endif %}
   href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
   rel="stylesheet"
 />
+<link
+  href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;1,300;1,400&display=swap"
+  rel="stylesheet"
+/>
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link
   href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
