--- a/includes/nav2.html
+++ b/includes/nav2.html
@@ -8,11 +8,24 @@
   </div>
   <div class="icon icon-apple"></div>
   <ul class="menu">
-    <!-- <li class="menu-item page-title">Rhet Dev</li> -->
-    <li class="menu-item"><a href="/">Home</a></li>
-    <li class="menu-item"><a href="/about">About</a></li>
-    <li class="menu-item"><a href="/blog">Blog</a></li>
-    <li class="menu-item"><a href="/notes">Notes</a></li>
+    <div id="left">
+      <div class="circle">
+        <img
+          id="nav-avatar"
+          src="/assets/avatar.png"
+          alt="Avatar illustration"
+          width="10px"
+          height="10px"
+        />
+      </div>
+      Bret Zawilski
+    </div>
+    <div id="right">
+      <li class="menu-item"><a href="/">Home</a></li>
+      <li class="menu-item"><a href="/about">About</a></li>
+      <li class="menu-item"><a href="/blog">Blog</a></li>
+      <li class="menu-item"><a href="/notes">Notes</a></li>
+    </div>
   </ul>
   <div class="shop icon icon-bag"></div>
 </div>
