--- a/layouts/blog.njk
+++ b/layouts/blog.njk
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    {% include head.html %}
+    {% include 'head.njk' %}
   </head>
   <body>
     <div class="window">
-      {% include nav2.html %}
+      {% include 'nav2.njk' %}
       <main>
         <article>
           <h1>{{ title }}</h1>
